`Added active class styling to nav links and updated links in auctions and homepage HTML files`

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -9,7 +9,10 @@ a{
     color:white;
     text-decoration: none;
 }
-
+.nav-links .active {
+    font-weight: bold; 
+    text-decoration: underline;  
+}
 a:hover{
     text-decoration: underline;
     color:#ddd;
