--- a/CSS/loginstyle.css
+++ b/CSS/loginstyle.css
@@ -1,24 +1,31 @@
-.logininpage {
-    display: flex;
-    flex-direction: column; 
-    align-items: center; 
-    justify-content: center; 
-    height: 100vh;
-    background: #ffffff;
-    padding: 2vh 2vw; 
+body {
+    background: url('/Images/benner_7.jpg');
+    background-size: 120%;
+    margin: 0;
+    padding: 0;
 }
 
-.welcome-message {
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: #ffffff;
+    padding: 2vh 2vw;
+}
+
+.header {
     text-align: center;
     color: #333;
     margin-bottom: 2vh;
     font-size: 2.5vw;
-    margin-top: -10vh; 
+    margin-top: -10vh;
 }
 
-.rounded-box {
+.card {
     color: #ffffff;
-    width: 40%; 
+    width: 40%;
     background-color: #38644c;
     border-radius: 2vw;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -29,7 +36,7 @@
     gap: 2vh;
 }
 
-.input-box {
+.input-field {
     width: 90%;
     padding: 1rem;
     border: none;
@@ -40,12 +47,11 @@
     outline: none;
 }
 
-.input-box::placeholder {
+.input-field::placeholder {
     color: #aaa;
-    
 }
 
-.remember-me {
+.checkbox-group {
     display: flex;
     align-items: center;
     gap: 1vw;
@@ -54,7 +60,7 @@
     width: 90%;
 }
 
-.login-button {
+.button {
     width: 90%;
     padding: 1rem;
     border: none;
@@ -66,6 +72,92 @@
     transition: background-color 0.3s;
 }
 
-.login-button:hover {
+.button:hover {
     background-color: #45a049;
+}
+
+.title {
+    text-align: center;
+    margin-top: 4rem;
+}
+
+.title h1 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #333;
+    text-decoration: underline;
+}
+
+.flex-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6rem;
+    margin-top: 2rem;
+}
+
+.flex-item {
+    width: 400px;
+    height: auto;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    font-size: 1.7rem;
+    font-weight: bold;
+    color: #333;
+    gap: 1rem;
+}
+
+.description {
+    font-size: 1rem;
+    font-weight: normal;
+    color: #666;
+    text-align: center;
+    margin-bottom: 0.2rem;
+}
+
+.action-button {
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    background-color: #4caf50;
+    color: #fff;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.action-button:hover {
+    background-color: #45a049;
+}
+
+.divider {
+    width: 60%;
+    margin: auto;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    border: none;
+    border-top: 2px solid #ccc;
+}
+
+.section {
+    text-align: center;
+}
+
+.section-title {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 0.4rem;
+    text-decoration: underline;
+}
+
+.section-text {
+    font-size: 1.2rem;
+    color: #666;
+    line-height: 1.5;
 }
